@@ -203,7 +203,7 @@ m68*-hp*-netbsd*)	targ_emul=m68k4knbsd ;;
 m68*-*-netbsd*)		targ_emul=m68knbsd ;;
 m68*-*-psos*)		targ_emul=m68kpsos ;;
 m68*-*-rtems*)		targ_emul=m68kcoff ;;
-hppa*w*-*)		targ_emul=elf64hppa ;;
+#hppa*w*-*)		targ_emul=elf64hppa ;;
 hppa*-*-*elf*)		targ_emul=hppaelf ;;
 hppa*-*-linux-gnu*)	targ_emul=hppaelf ;;
 hppa*-*-lites*)		targ_emul=hppaelf ;;
